namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    environment: production
  name: production
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    environment: staging
  name: staging
